{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 80,
  "lineage": "5afe0970-4f09-d0ce-4fc6-c3dcd6905d2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bce3a71de37d02d9",
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:elastic-ip/eipalloc-0bce3a71de37d02d9",
            "association_id": "eipassoc-08a46ea2727b4374e",
            "domain": "vpc",
            "id": "eipalloc-0bce3a71de37d02d9",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-045360610ee4a80d9",
            "private_dns": "ip-172-16-1-44.ap-northeast-2.compute.internal",
            "private_ip": "172.16.1.44",
            "public_dns": "ec2-13-209-30-15.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.30.15",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Terraform-nat-eip"
            },
            "tags_all": {
              "Name": "Terraform-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-ec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b818a04bc9c2133c",
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:instance/i-01d80e48fd17c3bef",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d80e48fd17c3bef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06c1712bc2d2b5811"
              }
            ],
            "primary_network_interface_id": "eni-06c1712bc2d2b5811",
            "private_dns": "ip-172-16-3-72.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.3.72",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01ac309282281bbaa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0840940d94473d38b",
            "tags": {
              "Name": "Terraform-ec2-1"
            },
            "tags_all": {
              "Name": "Terraform-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069c8ad3102ef74f1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "i-01d80e48fd17c3bef",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.tf-nat-eip",
            "aws_internet_gateway.tf-igw",
            "aws_nat_gateway.tf-nat-gw",
            "aws_security_group.tf-ec2-sg",
            "aws_subnet.tf-pri-sn3",
            "aws_subnet.tf-pub-sn1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-ec2-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b818a04bc9c2133c",
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:instance/i-0a2bc02aa6152a930",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2bc02aa6152a930",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08841b3fca6ac38a5"
              }
            ],
            "primary_network_interface_id": "eni-08841b3fca6ac38a5",
            "private_dns": "ip-172-16-4-237.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.4.237",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-068cc12bef7e1b480",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3f44883266e0428",
            "tags": {
              "Name": "Terraform-ec2-2"
            },
            "tags_all": {
              "Name": "Terraform-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069c8ad3102ef74f1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "i-0a2bc02aa6152a930",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.tf-nat-eip",
            "aws_internet_gateway.tf-igw",
            "aws_nat_gateway.tf-nat-gw",
            "aws_security_group.tf-ec2-sg",
            "aws_subnet.tf-pri-sn4",
            "aws_subnet.tf-pub-sn1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:internet-gateway/igw-0bad20c3bac457c13",
            "id": "igw-0bad20c3bac457c13",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Terraform-igw"
            },
            "tags_all": {
              "Name": "Terraform-igw"
            },
            "vpc_id": "vpc-05676841683020c9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:loadbalancer/app/tf-alb/1a59a2ac8e1a4173",
            "arn_suffix": "app/tf-alb/1a59a2ac8e1a4173",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-alb-469780395.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:loadbalancer/app/tf-alb/1a59a2ac8e1a4173",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-06d8ebed6aeacc1cc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d254b6fb9fd2a4c"
              },
              {
                "subnet_id": "subnet-0debaaae50b8c22d7"
              }
            ],
            "subnets": [
              "subnet-03d254b6fb9fd2a4c",
              "subnet-0debaaae50b8c22d7"
            ],
            "tags": {
              "Name": "Terraform-alb"
            },
            "tags_all": {
              "Name": "Terraform-alb"
            },
            "vpc_id": "vpc-05676841683020c9a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:loadbalancer/app/tf-alb/1a59a2ac8e1a4173"
          },
          "dependencies": [
            "aws_security_group.tf-alb-sg",
            "aws_subnet.tf-pub-sn1",
            "aws_subnet.tf-pub-sn2",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tf-web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:listener/app/tf-alb/1a59a2ac8e1a4173/b8238d9c2a96b3e8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/2052970574a18bb6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:listener/app/tf-alb/1a59a2ac8e1a4173/b8238d9c2a96b3e8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:loadbalancer/app/tf-alb/1a59a2ac8e1a4173",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:listener/app/tf-alb/1a59a2ac8e1a4173/b8238d9c2a96b3e8"
          },
          "dependencies": [
            "aws_lb.tf-alb",
            "aws_lb_target_group.tf-tg",
            "aws_security_group.tf-alb-sg",
            "aws_subnet.tf-pub-sn1",
            "aws_subnet.tf-pub-sn2",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tf-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/2052970574a18bb6",
            "arn_suffix": "targetgroup/tf-alb-tg/2052970574a18bb6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/2052970574a18bb6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05676841683020c9a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/2052970574a18bb6"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tf-tg-ec2-att-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/2052970574a18bb6-20251210085732566200000001",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/2052970574a18bb6",
            "target_id": "i-01d80e48fd17c3bef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf-nat-eip",
            "aws_instance.tf-ec2-1",
            "aws_internet_gateway.tf-igw",
            "aws_lb_target_group.tf-tg",
            "aws_nat_gateway.tf-nat-gw",
            "aws_security_group.tf-ec2-sg",
            "aws_subnet.tf-pri-sn3",
            "aws_subnet.tf-pub-sn1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tf-tg-ec2-att-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/2052970574a18bb6-20251210085732667600000002",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/2052970574a18bb6",
            "target_id": "i-0a2bc02aa6152a930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf-nat-eip",
            "aws_instance.tf-ec2-2",
            "aws_internet_gateway.tf-igw",
            "aws_lb_target_group.tf-tg",
            "aws_nat_gateway.tf-nat-gw",
            "aws_security_group.tf-ec2-sg",
            "aws_subnet.tf-pri-sn4",
            "aws_subnet.tf-pub-sn1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bce3a71de37d02d9",
            "association_id": "eipassoc-08a46ea2727b4374e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-072d8cf403c29e805",
            "network_interface_id": "eni-045360610ee4a80d9",
            "private_ip": "172.16.1.44",
            "public_ip": "13.209.30.15",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0debaaae50b8c22d7",
            "tags": {
              "Name": "Terraform-nat-gw"
            },
            "tags_all": {
              "Name": "Terraform-nat-gw"
            },
            "vpc_id": "vpc-05676841683020c9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf-nat-eip",
            "aws_internet_gateway.tf-igw",
            "aws_subnet.tf-pub-sn1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tf-pri-rt-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a7a819cfdf8d6c0b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-072d8cf403c29e805",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a7a819cfdf8d6c0b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a7a819cfdf8d6c0b"
          },
          "dependencies": [
            "aws_eip.tf-nat-eip",
            "aws_internet_gateway.tf-igw",
            "aws_nat_gateway.tf-nat-gw",
            "aws_route_table.tf-pri-rt",
            "aws_subnet.tf-pub-sn1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:route-table/rtb-0a7a819cfdf8d6c0b",
            "id": "rtb-0a7a819cfdf8d6c0b",
            "owner_id": "192676124148",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-072d8cf403c29e805",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-pri-rt"
            },
            "tags_all": {
              "Name": "Terraform-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05676841683020c9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "rtb-0a7a819cfdf8d6c0b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:route-table/rtb-063d26218ae4bccb8",
            "id": "rtb-063d26218ae4bccb8",
            "owner_id": "192676124148",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bad20c3bac457c13",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-pub-rt"
            },
            "tags_all": {
              "Name": "Terraform-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05676841683020c9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "rtb-063d26218ae4bccb8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-pri-rt-ass3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07aae9801e3d7a2f4",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a7a819cfdf8d6c0b",
            "subnet_id": "subnet-0840940d94473d38b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.tf-pri-rt",
            "aws_subnet.tf-pri-sn3",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-pri-rt-ass4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076cb553835b186d2",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a7a819cfdf8d6c0b",
            "subnet_id": "subnet-0b3f44883266e0428"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.tf-pri-rt",
            "aws_subnet.tf-pri-sn4",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-pub-rt-ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b52c54848077ad8b",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-063d26218ae4bccb8",
            "subnet_id": "subnet-0debaaae50b8c22d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_route_table.tf-pub-rt",
            "aws_subnet.tf-pub-sn1",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-pub-rt-ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e29d39b77e87fdc",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-063d26218ae4bccb8",
            "subnet_id": "subnet-03d254b6fb9fd2a4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_route_table.tf-pub-rt",
            "aws_subnet.tf-pub-sn2",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group/sg-06d8ebed6aeacc1cc",
            "description": "Allow HTTP, HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d8ebed6aeacc1cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-alb-sg",
            "name_prefix": "",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-alb-sg"
            },
            "tags_all": {
              "Name": "Terraform-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05676841683020c9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sg-06d8ebed6aeacc1cc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group/sg-069c8ad3102ef74f1",
            "description": "Allow SSH, HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069c8ad3102ef74f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-ec2-sg",
            "name_prefix": "",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-ec2-sg"
            },
            "tags_all": {
              "Name": "Terraform-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05676841683020c9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sg-069c8ad3102ef74f1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-pri-sn3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:subnet/subnet-0840940d94473d38b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0840940d94473d38b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192676124148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Terraform-pri-sn3"
            },
            "tags_all": {
              "Name": "Terraform-pri-sn3"
            },
            "vpc_id": "vpc-05676841683020c9a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "subnet-0840940d94473d38b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-pri-sn4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:subnet/subnet-0b3f44883266e0428",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3f44883266e0428",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192676124148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Terraform-pri-sn4"
            },
            "tags_all": {
              "Name": "Terraform-pri-sn4"
            },
            "vpc_id": "vpc-05676841683020c9a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "subnet-0b3f44883266e0428",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-pub-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:subnet/subnet-0debaaae50b8c22d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0debaaae50b8c22d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192676124148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Terraform-pub-sn1"
            },
            "tags_all": {
              "Name": "Terraform-pub-sn1"
            },
            "vpc_id": "vpc-05676841683020c9a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "subnet-0debaaae50b8c22d7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-pub-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:subnet/subnet-03d254b6fb9fd2a4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d254b6fb9fd2a4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192676124148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Terraform-pub-sn2"
            },
            "tags_all": {
              "Name": "Terraform-pub-sn2"
            },
            "vpc_id": "vpc-05676841683020c9a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "subnet-03d254b6fb9fd2a4c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:vpc/vpc-05676841683020c9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0f2a1a6bbac3a94cf",
            "default_route_table_id": "rtb-0a6a3bc48cffd2fc9",
            "default_security_group_id": "sg-03ff8492f5094a15b",
            "dhcp_options_id": "dopt-0a9813bc501c7365e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05676841683020c9a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6a3bc48cffd2fc9",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Terraform-vpc"
            },
            "tags_all": {
              "Name": "Terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "vpc-05676841683020c9a",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tf-alb-sg-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-00297c9627e532002",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00297c9627e532002",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-06d8ebed6aeacc1cc",
            "security_group_rule_id": "sgr-00297c9627e532002",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-00297c9627e532002",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.tf-alb-sg",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tf-ec2-sg-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-05d3d9d1f393cc729",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05d3d9d1f393cc729",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-069c8ad3102ef74f1",
            "security_group_rule_id": "sgr-05d3d9d1f393cc729",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-05d3d9d1f393cc729",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.tf-ec2-sg",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf-alb-sg-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-03e1fb9c8aaa799bf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03e1fb9c8aaa799bf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-06d8ebed6aeacc1cc",
            "security_group_rule_id": "sgr-03e1fb9c8aaa799bf",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-03e1fb9c8aaa799bf",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.tf-alb-sg",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf-alb-sg-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-05cae65e54f2504a9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-05cae65e54f2504a9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-06d8ebed6aeacc1cc",
            "security_group_rule_id": "sgr-05cae65e54f2504a9",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-05cae65e54f2504a9",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.tf-alb-sg",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf-ec2-sg-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-034e3f5880b0ea54d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-034e3f5880b0ea54d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-069c8ad3102ef74f1",
            "security_group_rule_id": "sgr-034e3f5880b0ea54d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-034e3f5880b0ea54d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.tf-ec2-sg",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf-ec2-sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-0bf0496c888035ae8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0bf0496c888035ae8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-069c8ad3102ef74f1",
            "security_group_rule_id": "sgr-0bf0496c888035ae8",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-0bf0496c888035ae8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.tf-ec2-sg",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    }
  ]
}